Fix reviewer icons misalignment by adding align-items: center

--- a/webviews/common/common.css
+++ b/webviews/common/common.css
@@ -235,6 +235,7 @@ body img.avatar {
 
 .reviewer-icons {
 	display: flex;
+	align-items: center;
 	gap: 4px;
 }
 
